<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/error_dialog_layout"
    style="@style/AppBaseTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/error_dialog_message"
        style="@style/MessageTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:maxLines="10"
        android:text="@string/message_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_below="@+id/error_dialog_message"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp" >

        <Button
            android:id="@+id/cancel_button"
            style="@style/AppBaseTheme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/retry_button"
            style="@style/AppBaseTheme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/retry_button" />

    </LinearLayout>

</RelativeLayout>
