<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="2dp"
    android:minHeight="100px" >

    <TextView
        android:id="@+id/ministryListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/imageView1"
        android:maxLines="@integer/max_rows_ministry_cell"
        android:text="@string/title_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ministryListSpeaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ministryListTitle"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/speaker_placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/ministryListVenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ministryListSpeaker"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_toLeftOf="@+id/ministryListDate"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/venue_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/ministryListDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ministryListSpeaker"
        android:layout_marginTop="2dp"
        android:text="@string/date_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
